environments/prod/suggestarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: suggestarr
  namespace: suggestarr
  labels:
    app.kubernetes.io/name: suggestarr
    app.kubernetes.io/instance: suggestarr
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: suggestarr
    app.kubernetes.io/instance: suggestarr
