environments/prod/suggestarr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: suggestarr-route
  namespace: suggestarr
  labels:
    app.kubernetes.io/name: suggestarr
spec:
  parentRefs:
    - name: simons-gateway
      namespace: envoy
  hostnames:
    - "suggest.simonbrundin.com"
  rules:
    - backendRefs:
        - kind: Service
          name: suggestarr
          port: 5000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
